learning template's in django

--- a/django_app/home/templates/index.html
+++ b/django_app/home/templates/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django-app</title>
+    <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>
         Welcome to Django-app
+        <table>
+            <tr>
+              <th>S.no</th>
+              <th>Name</th>
+              <th>Age</th>
+            </tr>
+            {% for peoples in people%}
+            <tr>
+              <td>{{forloop.counter}}</td>
+              <td>{{peoples.name}}</td>
+              <td>{{peoples.age}}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </h1>
     
 </body>
